@@ -86,12 +86,6 @@ then
 fi
 
 #
-# Convert the input file into a QC-ready version that can be used to run
-# the sanity/QC reports against.
-#
-dos2unix ${INPUT_FILE_DEFAULT} ${INPUT_FILE_DEFAULT} 2>/dev/null
-
-#
 #  Source the DLA library functions.
 #
 
@@ -143,6 +137,12 @@ then
         fi
     fi
 fi
+
+#
+# Convert the input file into a QC-ready version that can be used to run
+# the sanity/QC reports against.
+#
+dos2unix ${INPUT_FILE_DEFAULT} ${INPUT_FILE_DEFAULT} 2>/dev/null
 
 #
 # Execute nomen load
