@@ -1,3 +1,8 @@
+TAG: nomenload-6-0-12-2
+DATE: 05/22/2018
+STAFF: lec 
+CHANGES: move dos2unix below LASTRUN check
+
 TAG: nomenload-6-0-12-1
 DATE: 03/07/2018
 STAFF: lec 
